libreria para las distribuciones

--- a/TP3SIM/TP3SIM.csproj
+++ b/TP3SIM/TP3SIM.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Distribucion.cs" />
     <Compile Include="Exponencial.cs">
       <SubType>Form</SubType>
     </Compile>
